Fix cutoff header on mobile

--- a/styles.css
+++ b/styles.css
@@ -437,7 +437,7 @@ ul.people {
     }
 
     .index h1 {
-        font-size: 2.1rem;
+        font-size: 1.9rem;
     }
 
     p {
